Add endpoints and UI for child user work reports #30

--- a/Avhrm.UI.Shared/Pages/Index.razor
+++ b/Avhrm.UI.Shared/Pages/Index.razor
@@ -32,6 +32,12 @@
                         @TextResources.APP_StringKeys_WorkingReport_Search
                     </td>
                 </tr>
+                <tr>
+                    <td @onclick="OnWorkingChildClick">
+                        <MaterialIcon IconName="@MaterialIconsHelper.Summarize"></MaterialIcon>
+                        @TextResources.APP_StringKeys_WorkingReport_ChildUsers
+                    </td>
+                </tr>
             }
         </tbody>
     </table>
