--- a/Avhrm.UI.Shared/Shared/MainLayout.razor
+++ b/Avhrm.UI.Shared/Shared/MainLayout.razor
@@ -62,6 +62,10 @@
                                     <MaterialIcon IconName="@MaterialIconsHelper.Work"></MaterialIcon>
                                     @TextResources.APP_StringKeys_WorkingReport_Search
                                 </MudNavLink>
+                                <MudNavLink Match="NavLinkMatch.All" Href="/workingreport/childreport">
+                                    <MaterialIcon IconName="@MaterialIconsHelper.Summarize"></MaterialIcon>
+                                    @TextResources.APP_StringKeys_WorkingReport_ChildUsers
+                                </MudNavLink>
                                 <MudNavLink OnClick="OnClickExit">
                                     <MaterialIcon IconName="@MaterialIconsHelper.Logout"></MaterialIcon>
                                     @TextResources.APP_StringKeys_Exit
