--- a/Avhrm.UI.Shared/Pages/WorkingReport/Add.razor
+++ b/Avhrm.UI.Shared/Pages/WorkingReport/Add.razor
@@ -39,12 +39,12 @@
             </div>
         }
         <div class="form-group">
-            <MudTextField @bind-Value="Command.PersianDate"
-                          Label="@TextResources.APP_StringKeys_Date"
-                          Variant="Variant.Outlined"
-                          Margin="Margin.Dense"
-                          ReadOnly="true">
-            </MudTextField>
+            <MudDatePicker Label="@TextResources.APP_StringKeys_Date"
+                           @bind-Date="Command.PersianDate"
+                           Culture="@MudblazorDatePickerHelper.GetPersianCulture()"
+                           TitleDateFormat="dddd, dd MMMM" 
+                           Variant="Variant.Outlined"
+                           Margin="Margin.Dense" />
         </div>
         <div class="form-group">
             <MudTextField @bind-Value="Command.SpentHours"
