--- a/Avhrm.UI.Shared/Pages/WorkingReport/Add.razor
+++ b/Avhrm.UI.Shared/Pages/WorkingReport/Add.razor
@@ -44,7 +44,8 @@
                            Culture="@MudblazorDatePickerHelper.GetPersianCulture()"
                            TitleDateFormat="dddd, dd MMMM" 
                            Variant="Variant.Outlined"
-                           Margin="Margin.Dense" />
+                           Margin="Margin.Dense"
+                           PickerVariant="PickerVariant.Dialog" />
         </div>
         <div class="form-group">
             <MudTextField @bind-Value="Command.SpentHours"
