Update to .NET 9.0 and centralize project properties #39

--- a/Avhrm.UI.Shared/Shared/MainLayout.razor
+++ b/Avhrm.UI.Shared/Shared/MainLayout.razor
@@ -3,6 +3,7 @@
 
 <MudRTLProvider RightToLeft="true">
     <MudThemeProvider />
+    <MudPopoverProvider />
 
     <MudLayout>
         <MudMainContent>
